CSS/style.css
/* ... */
/*INTERNSHIP MOBILE VIEW SECTION*/
.intern-mobile{
    width: 100%;
    overflow: hidden;
    display: none;
}
.intern-mobile .intern-mobile-image{
    display: flex;
    width: 200%;
}
.intern-mobile .intern-mobile-image .image1{
    background-image: url("../assets/intern-work.jpeg");
    height: 60vh;
    background-repeat: no-repeat;
    width: 30%;
    background-position: center;
    background-size: cover;
    margin: 16px;
    overflow: hidden;
    border-radius: 5px;
}
.intern-mobile .intern-mobile-image .image2{
    background-image: url("../assets/intern-discover.jpeg");
    height: 60vh;
    background-repeat: no-repeat;
    width: 30%;
    background-position: center;
    background-size: cover;
    margin: 16px;
    overflow: hidden;
    border-radius: 5px;
}
.intern-mobile .intern-mobile-image .image3{
    background-image: url("../assets/intern-fren.jpeg");
    height: 60vh;
    background-repeat: no-repeat;
    width: 30%;
    background-position: center;
    background-size: cover;
    margin: 16px;
    overflow: hidden;
    border-radius: 5px;
}
.mobile-text, .mobile-text1, .mobile-text2{
    background-color: white;
    position: relative;
    top: 30%;
    height: 24vh;
    border-bottom: 5px solid blue;
    text-align: start;
}
.mobile-text .intern-head{
    color: blue;
}
.mobile-text1 .intern-head{
    color: blue;
}
.mobile-text2 .intern-head{
    color: blue;
}
.mobile-text .intern-text{
    text-align: start;
    font-size: 14px;
    width: 100%;
    margin: auto;
    padding-top: 16px;
}
.mobile-text1 .intern-text{
    text-align: start;
    font-size: 14px;
    width: 100%;
    margin: auto;
    padding-top: 16px;
}
.mobile-text2 .intern-text{
    text-align: start;
    font-size: 14px;
    width: 100%;
    margin: auto;
    padding-top: 16px;
}

.intern-arrows{
    position: relative;
    display: flex;
    justify-content: center;
}

.intern-arrows span i{
    color: blue;
    margin-left: 50px;
}
.intern-arrows p{
    font-size: 16px;
    padding-top: 0px;
}

/*MOBILE VIEW*/

@media (max-width: 768px){
    /*NAV-MOBILE-VIEW*/
  label.logo{
    font-size: 30px;
    padding-left: 50px;
  }
  nav ul li a{
    font-size: 16px;
  }
}
/* ... */

